# prism.nvim

./: .luarc.json  CLAUDE.md  README.md  index.html  install.sh  prism-mcp  prism-mcp.bak  pyproject.toml
.claude-plugin/: CLAUDE.md  marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
doc/: prism.txt
docs/: index.html
include/agp/: damage_index.hpp  damage_index_reader.hpp  damage_index_writer.hpp
lua/prism/: config.lua  core.lua  event.lua  health.lua  init.lua  integrations.lua  selection.lua  send.lua  simple.lua  util.lua
lua/prism/actions/: builtin.lua  init.lua
lua/prism/companion/: init.lua
lua/prism/cost/: init.lua  pricing.lua
lua/prism/diff/: compute.lua  extmarks.lua  init.lua
lua/prism/git/: hunk.lua  init.lua  watcher.lua
lua/prism/lsp/: code_actions.lua  init.lua
lua/prism/mcp/: init.lua  lockfile.lua
lua/prism/mcp/server/: client.lua  frame.lua  handshake.lua  sha1.lua  tcp.lua  utils.lua
lua/prism/mcp/tools/: check_dirty.lua  close_diffs.lua  close_tab.lua  edit_file.lua  get_diagnostics.lua  get_editors.lua  get_selection.lua  get_workspace.lua  init.lua  open_diff.lua  open_file.lua  save_document.lua  set_style.lua  (+2 more)
lua/prism/memory/: init.lua  search.lua  store.lua
lua/prism/review/: init.lua  status.lua
lua/prism/session/: init.lua  store.lua
lua/prism/terminal/: init.lua  keymaps.lua  passthrough.lua  provider_native.lua  provider_snacks.lua  provider_tmux.lua  simple.lua
lua/prism/ui/: chat.lua  diff_popup.lua  highlights.lua  init.lua  keymaps_help.lua  model_picker.lua  notify.lua  palette.lua  spinner.lua  status.lua  timeline.lua
plugin/: prism.lua
prism_nvim/: __init__.py  cli.py  debug_mcp.py  mcp_server.py  nvim_client.py  run_mcp.py  socket_registry.py
scripts/: ci-local.sh  prism-diff-hook.py  release.sh  test.sh
scripts/shell/: nvc.bash  nvc.fish  nvco.fish  nvcs.fish
shell/: prism.sh
skills/prism/: SKILL.md  install.py
src/: damage_index_reader.cpp  damage_index_writer.cpp
tests/: minimal_init.lua
tests/unit/: config_spec.lua  event_spec.lua  util_spec.lua
