[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prism-nvim"
version = "0.4.20"
description = "The Ultimate Claude Code Integration for Neovim - Full IDE Control via MCP"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Antonio" }
]
keywords = ["neovim", "claude", "ai", "mcp", "anthropic", "ide", "editor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Editors",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "msgpack>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black",
    "ruff",
]

[project.scripts]
prism-nvim = "prism_nvim.cli:main"

[project.urls]
Homepage = "https://genomewalker.github.io/prism.nvim/"
Repository = "https://github.com/genomewalker/prism.nvim"
Documentation = "https://genomewalker.github.io/prism.nvim/"
Issues = "https://github.com/genomewalker/prism.nvim/issues"

[tool.hatch.build.targets.wheel]
packages = ["prism_nvim"]

[tool.hatch.build.targets.sdist]
include = [
    "prism_nvim/**/*.py",
    "lua/**/*.lua",
    "plugin/**/*.lua",
    "scripts/**/*.py",
    "shell/**/*",
    "doc/**/*",
    "README.md",
    "LICENSE",
]

[tool.hatch.build.targets.wheel.shared-data]
"lua" = "share/prism-nvim/lua"
"plugin" = "share/prism-nvim/plugin"
"scripts" = "share/prism-nvim/scripts"
"shell" = "share/prism-nvim/shell"
"doc" = "share/prism-nvim/doc"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
